# NewsPaper/news/serializers.py
@@ -3,7 +3,9 @@ from rest_framework import serializers
 from .models import Post
 
 
-class PostSerializer(serializers.HyperlinkedModelSerializer):
+class PostSerializer(serializers.ModelSerializer):
+    author_post = serializers.HiddenField(default=serializers.CurrentUserDefault())
+
     class Meta:
         model = Post
-        fields = ['id', 'name_ru', 'name_en', 'date_pub']
+        fields = "__all__"
